backend and region: update openapi to get optional error reasons
