# packages/api/openapi/region.yaml
@@ -428,6 +428,12 @@ components:
       properties:
         message:
           type: string
+        reason:
+          type: string
+          enum:
+            - NoSubscription
+            - NoRemainingMinutes
+            - ConcurrencyLimitReached
       required:
         - message
     InstanceTokenCreate:
